# transcript-podcasts

./: .dockerignore  .env.example  .gitignore  Dockerfile  Nouvel enregistrement 2.m4a  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml
static/: app.js  index.html  login.html  style.css
