[project]
name = "transcript-podcasts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "mistralai>=2.4.5",
    "python-multipart>=0.0.28",
    "uvicorn[standard]>=0.46.0",
    "yt-dlp[default]>=2026.3.17",
]
